--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -310,3 +310,18 @@
   .jb-homepage-right-image>img {
     display: block;
   }
+
+  .jb-notifications-table {
+    font-size: 14px;
+  }
+
+  .jb-notifications-table th {
+    font-size: 16px;
+  }
+
+  .jb-notifications-button {
+    font-family: basic-sans, sans-serif;
+    background-color: #6F73DD;
+    color: #FFFFFF;
+    font-size: 14px;
+  }
