Update buttons on group pages

--- a/sled_groups/templates/sled_groups/group_split_list.html
+++ b/sled_groups/templates/sled_groups/group_split_list.html
@@ -41,7 +41,7 @@
   </p>
   {% endif %}
 
-  <button type="button" id="create-new-group" class="jb-button-1" data-form-url="{% url 'sled_groups:group-create' %}">
+  <button type="button" id="create-new-group" class="jb-submit-button-1" data-form-url="{% url 'sled_groups:group-create' %}">
     <img src="{% static 'icons/folder-fill.svg' %}" alt="group">
     Create new group
   </button>
