Update to website color scheme

--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -67,7 +67,7 @@
   .jb-heading-1 {
     margin: auto;
     font-family: basic-sans, sans-serif;
-    color: #221D93;
+    color: #37B97C;
     font-size: 40px;
     font-weight: 700;
     padding-top: 75px;
@@ -86,7 +86,7 @@
   .jb-heading-3 {
     margin: auto;
     font-family: basic-sans, sans-serif;
-    color: #221D93;
+    color: #37B97C;
     font-size: 40px;
     font-weight: 700;
     padding-top: 20px;
