Style acitivity stream

--- a/home/templates/home/home_index.html
+++ b/home/templates/home/home_index.html
@@ -7,9 +7,9 @@
   <div class="jb-container">
     <div class="jb-homepage-left-text">
       <h1 class="jb-heading-1">Welcome to the Strong Lensing Database</h1>
-      <h1 class="jb-heading-2-activity">Activity Stream</h1>
       {% if stream %}
-      <table class="jb-homepage-activity">
+      <br></br>
+      <table class="jb-activity">
         <tbody>
           {% for action in stream %}
           <tr>
