--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -60,8 +60,7 @@
   </div>
 
 
-  <div>
-    <h1 class="jb-heading-2">Activity Stream</h1>
+  <div class="jb-activity">
     {% activity_stream 'target' collection %}
     {% if stream %}
     <table>
