--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -279,23 +279,19 @@
   .jb-submit-button-1 {
     position: static;
     display: inline;
-    min-width: 125px;
+    min-width: 100px;
     margin-top: 10px;
     margin-right: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
     clear: none;
     background-color: #6F73DD;
     color: #FFFFFF;
-    font-size: 15px;
+    font-size: 14px;
   }
 
-  /* .main-topic {
-    display: table;
-    margin: 0 auto;
-  } */
   .jb-homepage-left-text {
     display: table-cell;
     vertical-align: middle;
@@ -311,26 +307,16 @@
     display: block;
   }
 
-  .jb-heading-2-activity {
+  .jb-activity {
     color: #ACACAC !important;
-    margin: auto;
-    font-family: basic-sans, sans-serif;
-    font-size: 25px;
-    line-height: 50px;
-    font-weight: 500;
+    font-size: 13px;
     padding-top: 20px;
   }
 
-  .jb-homepage-activity {
-    color: #ACACAC !important;
-  }
-
-  .jb-notifications-table {
-    font-size: 14px;
-  }
-
-  .jb-notifications-table th {
-    font-size: 16px;
+  .jb-activity td {
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-top: 0px solid #ACACAC;
   }
 
   .jb-notifications-button {
