--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -290,6 +290,23 @@
     background-color: #6F73DD;
     color: #FFFFFF;
     font-size: 14px;
+    border-radius: 3px;
+  }
+
+  .jb-submit-button-red {
+    position: static;
+    display: inline;
+    min-width: 100px;
+    margin-top: 10px;
+    margin-right: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    clear: none;
+    background-color: #FF5B43;
+    color: #FFFFFF;
+    font-size: 14px;
   }
 
   .jb-homepage-left-text {
@@ -326,34 +343,12 @@
     font-size: 14px;
   }
 
-  .jb-submit-button-green {
-    position: static;
-    display: inline;
-    min-width: 125px;
-    margin-top: 10px;
-    margin-right: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    clear: none;
-    background-color: #A7D74F;
-    color: #FFFFFF;
-    font-size: 15px;
+  .jb-left-details {
+    display: table-cell;
+    vertical-align: middle;
   }
 
-  .jb-submit-button-magenta {
-    position: static;
-    display: inline;
-    min-width: 125px;
-    margin-top: 10px;
-    margin-right: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    clear: none;
-    background-color: #DE53C9;
-    color: #FFFFFF;
-    font-size: 15px;
+  .jb-right-details {
+    display: table-cell;
+    width: 100 px;
   }
