--- a/lenses/templates/lenses/lens_resolve_duplicates.html
+++ b/lenses/templates/lenses/lens_resolve_duplicates.html
@@ -3,63 +3,63 @@
 
 
 {% block content %}
-<p>
-  Duplicates are:
-</p>
+<div class="jb-container">
+  <h1 class="jb-heading-1">Duplicates</h1>
 
 
-<form id="formset" method="POST">
-  {% csrf_token %}
-  {{ insert_formset.management_form }}
-  {{ insert_formset.non_form_errors }}
+  <form id="formset" method="POST">
+    {% csrf_token %}
+    {{ insert_formset.management_form }}
+    {{ insert_formset.non_form_errors }}
 
-  <div>
-    <table>
-      <thead>
-	<tr>
-	  <th>
-	    Lenses that require checking
-	  </th>
-	  <th>
-	    &nbsp;
-	  </th>
-	  <th>
-	    Existing lenses
-	  </th>
-	</tr>
-      </thead>
-      <tbody>
-	{% for new_lens,form,existing in new_form_existing %}
-	
-	<tr>
-	  <td>
-	    {% include 'lenses/lens_visit_card.html' with lens=new_lens %}
-	  </td>
-	  <td>
-	    {% if form %}
-	    {{ form.insert.errors }}
-	    {{ form.insert.label_tag }}
-	    {{ form.insert }}
-	    {{ form.index }}
-	    {% endif %}  
-	  </td>
-	  <td>
-	    {% for lens in existing %}
-	    {% include 'lenses/lens_visit_card.html' with lens=lens %}
-	    {% empty %}
-	    No duplicates!
-	    {% endfor %}
-	  </td>
-	</tr>
-	{% endfor %}
-      </tbody>
-    </table>
-  </div>
-  
-  <div>
-    <label>Resolve duplicates and submit?</label>
-    <button type="submit">Submit</button>
-  </div>
+    <div>
+      <table>
+        <thead>
+          <tr>
+            <th>
+              Lenses that require checking
+            </th>
+            <th>
+              &nbsp;
+            </th>
+            <th>
+              Existing lenses
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for new_lens,form,existing in new_form_existing %}
 
-</form>
+          <tr>
+            <td>
+              {% include 'lenses/lens_visit_card.html' with lens=new_lens %}
+            </td>
+            <td>
+              {% if form %}
+              {{ form.insert.errors }}
+              {{ form.insert.label_tag }}
+              {{ form.insert }}
+              {{ form.index }}
+              {% endif %}
+            </td>
+            <td>
+              {% for lens in existing %}
+              {% include 'lenses/lens_visit_card.html' with lens=lens %}
+              {% empty %}
+              No duplicates!
+              {% endfor %}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    <div>
+      <label>Resolve duplicates and submit?</label>
+      <button type="submit" class="jb-submit-button-1">Submit</button>
+    </div>
+
+  </form>
+</div>
 {% endblock content %}
