--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -1,3 +1,4 @@
+{% extends 'master_header.html' %}
 {% load static %}
 {% load activity_tags %}
 
@@ -62,7 +63,6 @@
         <td>{{lens.owner}}</td>
       </tr>
     </table>
-    <img src="{{ lens.mugshot.url }}">
   </div>
 
 
